--- a/apk/res/values-hu/strings.xml
+++ b/apk/res/values-hu/strings.xml
@@ -1012,7 +1012,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Áthelyezés a végére"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"A(z) <xliff:g id="SELECTED_APP">%s</xliff:g> alkalmazás húzására és helyének a prioritási listán való átrendezésére szolgáló gomb"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"A(z) <xliff:g id="SELECTED_APP">%s</xliff:g> appot a prioritási listáról eltávolító gomb"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Koppintson duplán és húzza az átrendezéshez"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"fitnesz, wellness"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"engedélyek"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, egészségügyi adatok, egészségügyi kategóriák, adathozzáférés, tevékenységek, testméretek, cikluskövetés, táplálkozás, alvás, életfunkciók"</string>
@@ -1106,6 +1110,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Alkalmazás hozzáadása"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Alkalmazásforrások szerkesztése"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Alapértelmezett"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"Alkalmazásadatok"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Itt jelennek majd meg a(z) <xliff:g id="APP_NAME">%1$s</xliff:g> adatai"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Itt jelennek meg az adatok azokból az alkalmazásokból, amelyek hozzáférnek a Health Connecthez"</string>
@@ -1160,6 +1170,10 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Véglegesen törli a kijelölt <xliff:g id="APP_NAME">%1$s</xliff:g>-bejegyzéseket a következő hónapra vonatkozóan: <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Véglegesen törli a(z) <xliff:g id="APP_NAME">%s</xliff:g> bejegyzését?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Véglegesen törli a következőhöz tartozó <xliff:g id="DATA_TYPE">%1$s</xliff:g> típusú adatokat: <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
+    <!-- no translation found for menu_show_system (5608880605989914394) -->
+    <skip />
+    <!-- no translation found for menu_hide_system (9218325603953186714) -->
+    <skip />
     <string name="on" msgid="8266542510798355807">"Be"</string>
     <string name="off" msgid="6996623844428550649">"Ki"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Hozzáférés: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
