--- a/apk/res/values-is/strings.xml
+++ b/apk/res/values-is/strings.xml
@@ -295,7 +295,7 @@
     <string name="body_temperature_read_content_description" msgid="5966765249024688738">"Lesa líkamshita"</string>
     <string name="body_temperature_write_content_description" msgid="5498016171067859369">"Skrifa líkamshita"</string>
     <string name="heart_rate_uppercase_label" msgid="4990167215137642430">"hjartslátt"</string>
-    <string name="heart_rate_lowercase_label" msgid="693492686337628283">"hjartsláttur"</string>
+    <string name="heart_rate_lowercase_label" msgid="693492686337628283">"hjartslætti"</string>
     <string name="heart_rate_read_content_description" msgid="4165867166260001259">"Lesa hjartslátt"</string>
     <string name="heart_rate_write_content_description" msgid="2876667918366409170">"Skrifa hjartslátt"</string>
     <string name="heart_rate_variability_uppercase_label" msgid="2047887230527012536">"Breytileg hjartsláttartíðni"</string>
@@ -315,7 +315,7 @@
     <string name="resting_heart_rate_read_content_description" msgid="1068160055773401020">"Lesa hjartslátt í hvíld"</string>
     <string name="resting_heart_rate_write_content_description" msgid="8848198128082739995">"Skrifa hjartslátt í hvíld"</string>
     <string name="skin_temperature_uppercase_label" msgid="4880306019368461268">"hitastig húðar"</string>
-    <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"hitastig húðar"</string>
+    <string name="skin_temperature_lowercase_label" msgid="7456421703641980581">"hitastigi húðar"</string>
     <string name="skin_temperature_read_content_description" msgid="1896127631429717621">"Lesa hitastig húðar"</string>
     <string name="skin_temperature_write_content_description" msgid="6448587289116206085">"Skrifa hitastig húðar"</string>
     <string name="browse_health_records_intro" msgid="1611488691642390523">"Þetta felur í sér allar heilsufarsskrár sem eru samstilltar og bætt við Heilsutengingu. Þetta er hugsanlega ekki öll sjúkraskráin þín og innheldur ekki læknisfræðilega lýsingu á heilsufarsskránum þínum."</string>
@@ -1012,7 +1012,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Færa neðst"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Hnappur til að draga og endurraða <xliff:g id="SELECTED_APP">%s</xliff:g> á forgangslista"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Hnappur til að fjarlægja <xliff:g id="SELECTED_APP">%s</xliff:g> af forgangslista"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Ýttu tvisvar og dragðu til að endurraða"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"hreysti, vellíðan"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"heimildir"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"heilsutenging, heilsugögn, heilsuflokkar, aðgangur að gögnum, hreyfing, líkamsmælingar, skráning tíðahrings, næring, svefn, lífsmörk"</string>
@@ -1106,6 +1110,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Bæta við forriti"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Bæta við eða fjarlægja forrit sem veita upplýsingar"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Sjálfgefin stilling tækis"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"Forritsgögn"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Gögn úr <xliff:g id="APP_NAME">%1$s</xliff:g> birtast hér"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Gögn úr forritum með aðgang að Heilsutengingu birtast hér"</string>
@@ -1160,6 +1170,10 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Eyða völdum <xliff:g id="APP_NAME">%1$s</xliff:g>-færslum frá <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g> fyrir fullt og allt?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Eyða þessari <xliff:g id="APP_NAME">%s</xliff:g>-færslu fyrir fullt og allt?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Loka fyrir aðgang <xliff:g id="APP_NAME">%2$s</xliff:g> að <xliff:g id="DATA_TYPE">%1$s</xliff:g>-gögnum varanlega?"</string>
+    <!-- no translation found for menu_show_system (5608880605989914394) -->
+    <skip />
+    <!-- no translation found for menu_hide_system (9218325603953186714) -->
+    <skip />
     <string name="on" msgid="8266542510798355807">"Kveikt"</string>
     <string name="off" msgid="6996623844428550649">"Slökkt"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Opnað kl. <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
