--- a/apk/res/values-ja/strings.xml
+++ b/apk/res/values-ja/strings.xml
@@ -1012,7 +1012,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"一番下に移動"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"優先度リスト内の <xliff:g id="SELECTED_APP">%s</xliff:g> をドラッグして順序を変更するボタンです"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"優先度リストから<xliff:g id="SELECTED_APP">%s</xliff:g>を削除するボタンです"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"並べ替えるにはダブルタップしてドラッグします"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"フィットネス, 健康管理"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"権限"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"ヘルスコネクト, 健康に関するデータ, 健康に関するカテゴリ, データアクセス, アクティビティ, 身体測定, 月経周期の管理, 栄養, 睡眠, バイタル"</string>
@@ -1106,6 +1110,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"アプリを追加"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"アプリのソースを編集する"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"デバイスのデフォルト"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"アプリデータ"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> からのデータがここに表示されます"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"ヘルスコネクトにアクセスできるアプリのデータがここに表示されます"</string>
@@ -1160,6 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>の選択した <xliff:g id="APP_NAME">%1$s</xliff:g> のエントリを完全に削除しますか？"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> のこのエントリを完全に削除しますか？"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> の <xliff:g id="DATA_TYPE">%1$s</xliff:g> のデータを完全に削除しますか？"</string>
+    <string name="menu_show_system" msgid="5608880605989914394">"システムアプリを表示"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"システムアプリを表示しない"</string>
     <string name="on" msgid="8266542510798355807">"ON"</string>
     <string name="off" msgid="6996623844428550649">"OFF"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"<xliff:g id="TIME_DATE">%1$s</xliff:g>にアクセス"</string>
