--- a/apk/res/values-be/strings.xml
+++ b/apk/res/values-be/strings.xml
@@ -1012,7 +1012,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Перамясціць уніз"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Кнопка для змянення прыярытэту праграмы \"<xliff:g id="SELECTED_APP">%s</xliff:g>\" (націсніце двойчы і перацягніце)"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Кнопка для выдалення праграмы \"<xliff:g id="SELECTED_APP">%s</xliff:g>\" з прыярытэтных"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Змяніце парадак перацягваннем, націснуўшы двойчы"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"фітнес, здароўе"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"дазволы"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"здароўе і спорт, даныя пра здароўе, катэгорыі здароўя, доступ да даных, актыўнасць, параметры цела, сачэнне за цыклам, харчаванне, сон, паказчыкі арганізма"</string>
@@ -1106,6 +1110,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Дадаць праграму"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Змяніць спіс праграм – крыніц даных"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Стандартная праграма прылады"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"Даныя праграмы"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Тут будуць паказвацца даныя з праграмы \"<xliff:g id="APP_NAME">%1$s</xliff:g>\""</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Тут будуць паказвацца даныя з праграм, у якіх ёсць доступ да \"Здароўя і спорту\""</string>
@@ -1160,6 +1170,10 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Назаўсёды выдаліць выбраныя запісы праграмы \"<xliff:g id="APP_NAME">%1$s</xliff:g>\" за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Назаўсёды выдаліць гэты запіс праграмы \"<xliff:g id="APP_NAME">%s</xliff:g>\"?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Назаўсёды выдаліць даныя \"<xliff:g id="DATA_TYPE">%1$s</xliff:g>\" для праграмы \"<xliff:g id="APP_NAME">%2$s</xliff:g>\"?"</string>
+    <!-- no translation found for menu_show_system (5608880605989914394) -->
+    <skip />
+    <!-- no translation found for menu_hide_system (9218325603953186714) -->
+    <skip />
     <string name="on" msgid="8266542510798355807">"Уключана"</string>
     <string name="off" msgid="6996623844428550649">"Выключана"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Апошні раз доступ быў атрыманы ў <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
