--- a/apk/res/values-bg/strings.xml
+++ b/apk/res/values-bg/strings.xml
@@ -1012,7 +1012,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Преместване в долната част"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Бутон за плъзгане и пренареждане на <xliff:g id="SELECTED_APP">%s</xliff:g> в приоритетния списък"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Бутон за премахване на <xliff:g id="SELECTED_APP">%s</xliff:g> от приоритетния списък"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Докоснете два пъти и плъзнете, за да пренаредите"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"физическа активност, уелнес"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"разрешения"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"Health Connect, здравни данни, здравни категории, достъп до данни, активност, мерки на тялото, проследяване на цикъла, хранене, сън, жизнени показатели"</string>
@@ -1106,6 +1110,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Добавяне на приложение"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Редактиране на източниците на приложения"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Стандартно за устройството"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"Данни от приложението"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Данните от <xliff:g id="APP_NAME">%1$s</xliff:g> ще се показват тук"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Тук ще се показват данните от приложенията, които имат достъп до Health Connect"</string>
@@ -1160,6 +1170,10 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Да се изтрият ли за постоянно избраните записи от <xliff:g id="APP_NAME">%1$s</xliff:g> за <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Да се изтрие ли за постоянно този запис от <xliff:g id="APP_NAME">%s</xliff:g>?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Да се изтрият ли за постоянно данните за <xliff:g id="DATA_TYPE">%1$s</xliff:g> за <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
+    <!-- no translation found for menu_show_system (5608880605989914394) -->
+    <skip />
+    <!-- no translation found for menu_hide_system (9218325603953186714) -->
+    <skip />
     <string name="on" msgid="8266542510798355807">"Вкл."</string>
     <string name="off" msgid="6996623844428550649">"Изкл."</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Осъществен достъп: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
