--- a/apk/res/values-eu/strings.xml
+++ b/apk/res/values-eu/strings.xml
@@ -1013,7 +1013,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Eraman beheraino"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Lehentasunen zerrendan <xliff:g id="SELECTED_APP">%s</xliff:g> arrastatzeko eta haren ordena aldatzeko botoia"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"<xliff:g id="SELECTED_APP">%s</xliff:g> lehentasunezkoen zerrendatik kentzeko botoia"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"Ordena aldatzeko, sakatu birritan eta arrastatu"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"fitnessa, ongizatea"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"baimenak"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, osasunari buruzko datuak, osasunarekin erlazionatutako kategoriak, datuetarako sarbidea, jarduerak, gorputzaren neurketak, zikloen jarraipena, elikadura, loa, bizi-konstanteak"</string>
@@ -1107,6 +1111,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Gehitu aplikazio bat"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"Editatu aplikazioen iturburuak"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Gailuko aplikazio lehenetsia"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"Aplikazioko datuak"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"<xliff:g id="APP_NAME">%1$s</xliff:g> aplikazioko datuak hemen agertuko dira"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Health Connect erabiltzeko baimena duten aplikazioetako datuak agertuko dira hemen"</string>
@@ -1161,6 +1171,10 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Betiko ezabatu nahi dituzu <xliff:g id="APP_NAME">%1$s</xliff:g> aplikazioaren hautatutako sarrerak (<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>)?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"<xliff:g id="APP_NAME">%s</xliff:g> aplikazioaren sarrera hau betiko ezabatu nahi duzu?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"<xliff:g id="APP_NAME">%2$s</xliff:g> aplikazioak honi buruz dituen datuak (<xliff:g id="DATA_TYPE">%1$s</xliff:g>) ezabatu nahi dituzu?"</string>
+    <!-- no translation found for menu_show_system (5608880605989914394) -->
+    <skip />
+    <!-- no translation found for menu_hide_system (9218325603953186714) -->
+    <skip />
     <string name="on" msgid="8266542510798355807">"Aktibatuta"</string>
     <string name="off" msgid="6996623844428550649">"Desaktibatuta"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Atzitze-data: <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
