--- a/apk/res/values-km/strings.xml
+++ b/apk/res/values-km/strings.xml
@@ -1012,7 +1012,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"ផ្លាស់ទី​ទៅ​ខាងក្រោម​បំផុត"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"ប៊ូតុងសម្រាប់អូស ហើយតម្រៀប<xliff:g id="SELECTED_APP">%s</xliff:g>ឡើងវិញនៅក្នុងបញ្ជីអាទិភាព"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"ប៊ូតុងសម្រាប់ដក <xliff:g id="SELECTED_APP">%s</xliff:g> ចេញពីបញ្ជីអាទិភាព"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"ចុចពីរដង ហើយអូស ដើម្បីតម្រៀបឡើងវិញ"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"សម្បទា សុខុមាលភាព"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"ការអនុញ្ញាត"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, ទិន្នន័យសុខភាព, ប្រភេទទិន្នន័យ, សិទ្ធិចូលប្រើទិន្នន័យ, សកម្មភាព, រង្វាស់រាងកាយ, ការតាមដានវដ្តរដូវ, អាហារូបត្ថម្ភ, ដេក, សរីរាង្គសំខាន់ៗ"</string>
@@ -1106,6 +1110,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"បញ្ចូល​កម្មវិធី"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"កែប្រភពកម្មវិធី"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"លំនាំដើម​របស់ឧបករណ៍"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"ទិន្នន័យកម្មវិធី"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"ទិន្នន័យពី <xliff:g id="APP_NAME">%1$s</xliff:g> នឹងបង្ហាញនៅទីនេះ"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"ទិន្នន័យពីកម្មវិធីដែលមានសិទ្ធិចូលប្រើប្រាស់ Health Connect នឹងបង្ហាញនៅទីនេះ"</string>
@@ -1160,6 +1170,10 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"លុបធាតុ <xliff:g id="APP_NAME">%1$s</xliff:g> ដែលបានជ្រើសរើសជាអចិន្ត្រៃយ៍សម្រាប់ខែ<xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"លុបធាតុ <xliff:g id="APP_NAME">%s</xliff:g> នេះជាអចិន្ត្រៃយ៍ឬ?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"លុបទិន្នន័យ<xliff:g id="DATA_TYPE">%1$s</xliff:g>សម្រាប់ <xliff:g id="APP_NAME">%2$s</xliff:g> ជាអចិន្ត្រៃយ៍ឬ?"</string>
+    <!-- no translation found for menu_show_system (5608880605989914394) -->
+    <skip />
+    <!-- no translation found for menu_hide_system (9218325603953186714) -->
+    <skip />
     <string name="on" msgid="8266542510798355807">"បើក"</string>
     <string name="off" msgid="6996623844428550649">"បិទ"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"បានចូលប្រើនៅម៉ោង <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
