--- a/apk/res/values-tl/strings.xml
+++ b/apk/res/values-tl/strings.xml
@@ -1012,7 +1012,11 @@
     <string name="action_drag_label_move_bottom" msgid="3117764196696569512">"Ilipat sa ibaba"</string>
     <string name="reorder_button_content_description" msgid="2685032520710743533">"Button para i-drag ang <xliff:g id="SELECTED_APP">%s</xliff:g> at baguhin ang ayos nito sa priority list"</string>
     <string name="remove_button_content_description" msgid="6170490900032612048">"Button para alisin ang <xliff:g id="SELECTED_APP">%s</xliff:g> sa listahan ng priyoridad"</string>
+    <!-- no translation found for see_actions_button_content_description (2004104767369363475) -->
+    <skip />
     <string name="reorder_button_action_description" msgid="5197462036756192214">"I-double tap at i-drag para ibahin ang pagkakaayos"</string>
+    <!-- no translation found for priority_list_item_content_description (8792727829749801217) -->
+    <skip />
     <string name="search_keywords_home" msgid="5386515593026555327">"fitness, wellness"</string>
     <string name="search_keywords_permissions" msgid="7821010295153350533">"mga pahintulot"</string>
     <string name="search_keywords_data" msgid="5359602744325490523">"health connect, data sa kalusugan, mga kategorya sa kalusugan, access sa data, aktibidad, mga sukat ng katawan, cycle pag-track, nutrisyon, tulog, vitals"</string>
@@ -1106,6 +1110,12 @@
     <string name="data_sources_add_app" msgid="319926596123692514">"Magdagdag ng app"</string>
     <string name="edit_data_sources" msgid="79641360876849547">"I-edit ang mga source ng app"</string>
     <string name="default_app_summary" msgid="6183876151011837062">"Default ng device"</string>
+    <!-- no translation found for move_up (9136155291380319606) -->
+    <skip />
+    <!-- no translation found for move_down (4404970288236170693) -->
+    <skip />
+    <!-- no translation found for remove (1340423400489007362) -->
+    <skip />
     <string name="app_data_title" msgid="6499967982291000837">"Data ng app"</string>
     <string name="app_data_no_data_footer" msgid="7027700714577530371">"Lalabas dito ang data mula sa <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="all_data_no_data_footer" msgid="2553443887019153340">"Lalabas dito ang data mula sa mga app na may access sa Health Connect"</string>
@@ -1160,6 +1170,8 @@
     <string name="some_app_entries_selected_month_deletion_confirmation_dialog" msgid="6617805533334875710">"Permanenteng i-delete ang mga napiling entry ng <xliff:g id="APP_NAME">%1$s</xliff:g> para sa <xliff:g id="SELECTED_DATE_RANGE">%2$s</xliff:g>?"</string>
     <string name="one_app_entry_selected_deletion_confirmation_dialog" msgid="7101939753210640660">"Permanenteng i-delete ang entry ng <xliff:g id="APP_NAME">%s</xliff:g> na ito?"</string>
     <string name="inactive_app_data_selected_deletion_confirmation_dialog" msgid="3192411589802497811">"Permanenteng i-delete ang data ng <xliff:g id="DATA_TYPE">%1$s</xliff:g> para sa <xliff:g id="APP_NAME">%2$s</xliff:g>?"</string>
+    <string name="menu_show_system" msgid="5608880605989914394">"Ipakita ang system"</string>
+    <string name="menu_hide_system" msgid="9218325603953186714">"Itago ang system"</string>
     <string name="on" msgid="8266542510798355807">"Naka-on"</string>
     <string name="off" msgid="6996623844428550649">"Naka-off"</string>
     <string name="wear_app_perms_24h_access" msgid="2997184871873750357">"Na-access noong <xliff:g id="TIME_DATE">%1$s</xliff:g>"</string>
